# ambience

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
Presets/: Reverb_Type_Presets.json
Source/: AlgorithmPresets.h  FDNCore.cpp  FDNCore.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: BiquadFilters.cpp  BiquadFilters.h  DSPConstants.h  DelayMemory.h  DelayUnit.cpp  DelayUnit.h  EarlyReflections.cpp  EarlyReflections.h  FDNReverbEngine.cpp  FDNReverbEngine.h  MagnitudeResponseFitter.cpp  MagnitudeResponseFitter.h  OutputLimiter.h  SAPFStage.cpp  SAPFStage.h  Saturator.h  UniversalEngine.cpp  UniversalEngine.h
Source/GUI/: AmbienceUI.cpp  AmbienceUI.h
